# InformationRetrieval

./: main.py  pyproject.toml
crawler/: crawler.py  scrape.ipynb
data/: business.csv  health.csv  inverted_index.json  politics.csv  publications_data.json
data1/: politics.csv
engine/: classifier_model.joblib  classifier_model.py  classify.ipynb  search_engine.py
templates/: index.html
