[project]
name = "scolar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[all]>=0.116.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "playwright>=1.54.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
